--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>7</source>
-                    <target>7</target>
+                    <target>7</target>x
                 </configuration>
             </plugin>
         </plugins>
@@ -26,7 +26,17 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
+
 
 </project>
 
