--- a/webapp/web/WEB-INF/web.xml
+++ b/webapp/web/WEB-INF/web.xml
@@ -6,10 +6,20 @@
     
     <servlet>
         <servlet-name>Servlet</servlet-name>
-        <servlet-class>Servlet</servlet-class>
+        <servlet-class>Servlets.Servlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Servlet</servlet-name>
         <url-pattern>/Servlet</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>ProjectServlet</servlet-name>
+        <servlet-class>Servlets.ProjectServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ProjectServlet</servlet-name>
+        <url-pattern>/project/</url-pattern>
     </servlet-mapping>
 </web-app>
