--- a/webapp/web/WEB-INF/web.xml
+++ b/webapp/web/WEB-INF/web.xml
@@ -22,4 +22,8 @@
         <servlet-name>ProjectServlet</servlet-name>
         <url-pattern>/project/</url-pattern>
     </servlet-mapping>
+
+    <listener>
+        <listener-class> Servlets.MyServletContextListener </listener-class>
+    </listener>
 </web-app>
