--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,8 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
   <display-name>Archetype Created Web Application</display-name>
   <listener>
     <listener-class> Servlets.MyServletContextListener </listener-class>
@@ -16,5 +16,14 @@
   <servlet-mapping>
     <servlet-name>ProjectServlet</servlet-name>
     <url-pattern>/project/</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>UsersServlet</servlet-name>
+    <servlet-class>Servlets.UsersServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>UsersServlet</servlet-name>
+    <url-pattern>/users/</url-pattern>
   </servlet-mapping>
 </web-app>
