--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,8 @@
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+         version="4.0"
+         metadata-complete="false">
   <display-name>Archetype Created Web Application</display-name>
   <listener>
     <listener-class> Servlets.MyServletContextListener </listener-class>
@@ -17,6 +18,16 @@
     <servlet-name>ProjectServlet</servlet-name>
     <url-pattern>/project/</url-pattern>
   </servlet-mapping>
+
+  <filter>
+    <filter-name>ProjectFilter</filter-name>
+    <filter-class>Servlets.Filters.ProjectFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  <filter-name>ProjectFilter</filter-name>
+  <url-pattern>/project/*</url-pattern>
+  </filter-mapping>
+
   <servlet>
     <servlet-name>UsersServlet</servlet-name>
     <servlet-class>Servlets.UsersServlet</servlet-class>
@@ -26,4 +37,24 @@
     <servlet-name>UsersServlet</servlet-name>
     <url-pattern>/users/</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+    <servlet-name>UserServlet</servlet-name>
+    <servlet-class>Servlets.UserServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>UserServlet</servlet-name>
+    <url-pattern>/user/</url-pattern>
+  </servlet-mapping>
+
+  <filter>
+    <filter-name>UserFilter</filter-name>
+    <filter-class>Servlets.Filters.UserFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  <filter-name>UserFilter</filter-name>
+  <url-pattern>/user/*</url-pattern>
+  </filter-mapping>
+
 </web-app>
