--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,18 @@
     <url-pattern>/user/</url-pattern>
   </servlet-mapping>
 
+  
+  <servlet>
+    <servlet-name>delSkill</servlet-name>
+    <servlet-class>Servlets.delSkill</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>delSkill</servlet-name>
+    <url-pattern>/delSkill</url-pattern>
+  </servlet-mapping>
+
+
   <filter>
     <filter-name>UserFilter</filter-name>
     <filter-class>Servlets.Filters.UserFilter</filter-class>
