--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>jetbrains</groupId>
+  <artifactId>jobKhar</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
+
+  <name>jobKhar Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -54,14 +58,14 @@
     <finalName>jobKhar</finalName>
     <pluginManagement>
       <plugins>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <version>3.7.0</version>
-              <configuration>
-                  <release>10</release>
-              </configuration>
-          </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.7.0</version>
+          <configuration>
+            <release>10</release>
+          </configuration>
+        </plugin>
 
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
