--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,8 +24,8 @@
     <filter-class>Servlets.Filters.ProjectFilter</filter-class>
   </filter>
   <filter-mapping>
-  <filter-name>ProjectFilter</filter-name>
-  <url-pattern>/project/*</url-pattern>
+    <filter-name>ProjectFilter</filter-name>
+    <url-pattern>/project/*</url-pattern>
   </filter-mapping>
 
   <servlet>
@@ -48,7 +48,16 @@
     <url-pattern>/user/</url-pattern>
   </servlet-mapping>
 
-  
+  <servlet>
+    <servlet-name>Bid</servlet-name>
+    <servlet-class>Servlets.Bid</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>Bid</servlet-name>
+    <url-pattern>/Bid</url-pattern>
+  </servlet-mapping>
+
   <servlet>
     <servlet-name>delSkill</servlet-name>
     <servlet-class>Servlets.delSkill</servlet-class>
@@ -59,7 +68,7 @@
     <url-pattern>/delSkill</url-pattern>
   </servlet-mapping>
 
-<servlet>
+  <servlet>
     <servlet-name>endorse</servlet-name>
     <servlet-class>Servlets.endorse</servlet-class>
   </servlet>
@@ -69,7 +78,17 @@
     <url-pattern>/endorse</url-pattern>
   </servlet-mapping>
 
-    <servlet>
+  <servlet-mapping>
+    <servlet-name>ProjectsServlet</servlet-name>
+    <url-pattern>/project</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>ProjectsServlet</servlet-name>
+    <servlet-class>Servlets.ProjectsServlet</servlet-class>
+  </servlet>
+
+  <servlet>
     <servlet-name>addSkill</servlet-name>
     <servlet-class>Servlets.addSkill</servlet-class>
   </servlet>
@@ -80,14 +99,24 @@
   </servlet-mapping>
 
 
-
   <filter>
     <filter-name>UserFilter</filter-name>
     <filter-class>Servlets.Filters.UserFilter</filter-class>
   </filter>
   <filter-mapping>
-  <filter-name>UserFilter</filter-name>
-  <url-pattern>/user/*</url-pattern>
+    <filter-name>UserFilter</filter-name>
+    <url-pattern>/user/*</url-pattern>
   </filter-mapping>
 
+  <error-page>
+    <error-code>404</error-code>
+    <location>/error404.jsp</location>
+  </error-page>
+
+  <error-page>
+    <error-code>403</error-code>
+    <location>/error403.jsp</location>
+  </error-page>
+
 </web-app>
+
