--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,13 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
-
+    
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20180130</version>
+    </dependency>
 
   </dependencies>
 
