--- a/react-client/package.json
+++ b/react-client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-toastify": "^5.0.0-rc.3",
     "typescript": "3.3.4000"
   },
   "scripts": {
