--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 
 # Created by https://www.gitignore.io/api/osx,java,eclipse,intellij,maven
 # Edit at https://www.gitignore.io/?templates=osx,java,eclipse,intellij,maven
-
+.vscode/
 ### Eclipse ###
 
 .metadata
