--- a/react-client/package.json
+++ b/react-client/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.8.10",
     "@types/react-dom": "16.8.3",
     "@types/react-router-dom": "^4.3.1",
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
     "react": "^16.8.5",
