--- a/react-client/package.json
+++ b/react-client/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.11",
+    "@types/jquery": "^3.3.29",
     "@types/node": "11.12.0",
     "@types/react": "16.8.10",
     "@types/react-dom": "16.8.3",
     "@types/react-router-dom": "^4.3.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.0",
     "query-string": "^6.4.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
