--- a/react-client/package.json
+++ b/react-client/package.json
@@ -15,9 +15,13 @@
     "query-string": "^6.4.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-loading": "^2.0.3",
+    "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-toastify": "^5.0.0-rc.3",
+    "styled-components": "^4.2.0",
+    "tachyons-components": "^1.0.1",
     "typescript": "3.3.4000"
   },
   "scripts": {
