--- a/react-client/package.json
+++ b/react-client/package.json
@@ -19,6 +19,7 @@
     "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-spinners": "^0.5.4",
     "react-toastify": "^5.0.0-rc.3",
     "styled-components": "^4.2.0",
     "tachyons-components": "^1.0.1",
