--- a/react-client/package.json
+++ b/react-client/package.json
@@ -23,7 +23,8 @@
     "react-toastify": "^5.0.0-rc.3",
     "styled-components": "^4.2.0",
     "tachyons-components": "^1.0.1",
-    "typescript": "3.3.4000"
+    "typescript": "3.3.4000",
+    "react-css-blur": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
