--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
       <version>20180130</version>
     </dependency>
 
+
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.21.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
