--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
       <version>3.21.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-dbcp</groupId>
+      <artifactId>commons-dbcp</artifactId>
+      <version>1.4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
