--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
       <version>1.4</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.9</version>
+    </dependency>
+
   </dependencies>
 
   <build>
