--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
       <version>1.9</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>3.8.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
