--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
       <version>3.8.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.3.6</version>
+    </dependency>
+
   </dependencies>
 
   <build>
