--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,19 @@ services:
       - 8080:8080
     depends_on: 
       - sqlite
-    
-
-
+  mysql:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+    ports:
+      - 3306:3306
+    volumes:
+      - ./sqlite:/sqlite
+  
   sqlite:
-    image: dockerpinata/sqlite
+    image: mysql
     build : .
     ports:
       - 8000:8000
