--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
       <version>3.25.2</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.16</version>
+    </dependency>
+
 
     <dependency>
       <groupId>commons-dbcp</groupId>
