--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
       <version>4.3.6</version>
     </dependency>
 
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
